maquetado de blog, agregue estilos, clase para recuadro y clase para fondo gris, acomode el fondo gris al final del cuadro que lo contiene utilizando posiscion, clase para fotos, clase letra gris

--- a/index.html
+++ b/index.html
@@ -8,12 +8,58 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
 		<script src="js/bootstrap.min.js"> </script>
-		<script src="js/tagcanvas.min.js" type="text/javascript"></script>
 		<meta name="viewport" content="widith=device-widith, initial-scale=1.0">  <!-- para que funcione el codigo a escala -->
 		<link rel="stylesheet" href="css/style.css">
 	  	<title>La República.pe</title>
 	</head>
 	<body>
-		
+		<!--Seccion de las fotos al incicio de home-->
+		<section>
+			<div class="container"><!--Container-->
+				<div class="row"><!--Renglon de titulo-->
+					<div class="col-md-12 text-center"><!--columnas titulo-->
+						<h1>GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA</h1>
+						<span class="fa fa-facebook"></span>	
+						<span class="fa fa-twitter"></span>
+						<span class="fa fa-google-plus"></span>
+						<img src="image/bullet.gif" alt="punto">
+						<small>Hace 12 minutos</small>
+						<img src="image/bullet.gif" alt="punto">
+						<small>POLÍTICA</small>
+					</div><!--fin de columnas-->
+				</div><!--Fin de renglon-->
+				<div class="row"><!--Renglon para fotos-->
+					<div class="col-md-6"><!--Imagen grane-->
+						<p>JNE impusará campaña en favor de la aprobación de la Reforma Electoral</p>
+					</div><!-- fin de imagen grande -->
+					<div class="col-md-6"><!--Imagencitas-->
+						<div class="row"><!--Primera imagen-->
+							<div class="col-md-16"><!--Columna para foto-->
+								<p>Martín Belaunde Lossio: Empresas vinculadas al empresario contrataron por S/. 3 000 millones | FOTOS</p>
+							</div><!--Fin de foto-->
+						</div><!--Fin de imagen-->
+						<div class="row"><!--Segunda imagen-->
+							<div class="col-md-16"><!--Columna para foto-->
+								<p>Sub 20: Perú vs Paraguay: bicolor empató 1-1 y pasó al hexagonal final del Sudamericano | VIDEO</p>
+							</div><!--Fin de foto-->
+						</div><!--Fin de imagen-->
+					</div><!--fin de imagencitas-->
+				</div><!--Fin de renglon-->
+			</div><!--Fin de container-->
+		</section><!-- fin de seccion -->
+		<section><!--Comentaristas-->
+			<div class="container"><!--Container-->
+				<div class="row">
+					<div class="col-md-12">
+						<h3>COLUMNISTAS</h3>
+					</div>
+				</div>
+				<div class="row"><!-- renglon para fotos -->
+					<div></div>
+				</div>
+			</div><!--Fin de container-->
+		</section><!--Fin de comentaristas  -->
+
 	</body>
 </html>
+<!--  -->
