--- a/index.html
+++ b/index.html
@@ -4,48 +4,58 @@
 		<meta charset="utf-8">							
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>La República.pe</title>
+		<link rel="stylesheet" href="css/font-awesome.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
-		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/edith.css">
-		<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+		
 		<script src="js/bootstrap.min.js"></script>
+
+	  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	  <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+  	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<header>
-			<!--banner-->
-			<!-- <div class="row">
-				<div class="col-xs-16 col-lg-16">
-					<nav>
-						<ul class="">
-							<li><a href="#">POLÍTICA</a></li>
-							<li><a href="#">ECONOMÍA</a></li>
-							<li><a href="#">SOCIEDAD</a></li>
-							<li><a href="#">ELECC. REGIONALES</a></li>
-							<li><a href="#">DEPORTES</a></li>
-							<li><a href="#">CHAMPIONS L.</a></li>
-							<li><a href="#">ESPECTÁCULOS</a></li>
-							<li><a href="#">ED. IMPRESA</a></li>
-							<li><a href="#">REGIONALES</a></li>
-						</ul>
-					</nav>
+			<div class="container-fluid bg-gris-claro">
+				<div class="row"><!--inicio banner-->
+					<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+						<img class="img-responsive center-block" src="image/banner_top.jpg" alt="banner-encabezado">
+					</div>
 				</div>
-			</div> -->
-			<div class="row">
-				<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
-					<nav class="navbar bg-rojo" role="navigation">
-						<div class="container-fluid">
-							<div class="navbar-header">
-								<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-principal">
-									<span class="sr-only">nav-responsive</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-							</div>
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+							<ul class="list-inline">
+								<li>LIBERO.PE</li>
+								<li>ELPOPULAR.PE</li>
+								<li>FUNDACIÓN GUSTAVO MOHME LLONA</li>
+							</ul>
 						</div>
-						<div class="collapse navbar-collapse" id="menu-principal">
-							<ul class="nav navbar-nav">
+						<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+							<button type="submit" class="btn btn-danger btn-sm">SUSCRÍBETE AL BOLETÍN</button><!--boton suscribirte-->
+							<i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+							<i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+							<i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
+							<i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
+							<i class="fa fa-rss fa-2x" aria-hidden="true"></i>
+							<form>
+								<div class="form-group">
+									<i class="fa fa-search posicion" aria-hidden="true"></i>
+									<input type="search" class="input-sm" placeholder="Buscar" name="buscando">
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div><!--fin banner-->
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+						<nav class=" bg-rojo" role="navigation">
+							<ul class="menu-rojo">
 								<li><a href="#">POLÍTICA</a></li>
 								<li><a href="#">ECONOMÍA</a></li>
 								<li><a href="#">SOCIEDAD</a></li>
@@ -55,14 +65,7 @@
 								<li><a href="#">ESPECTÁCULOS</a></li>
 								<li><a href="#">ED. IMPRESA</a></li>
 								<li><a href="#">REGIONALES</a></li>
-								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">MÁS SECCIONES<span class="caret"></span></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">ENLACE1</a></li>
-										<li><a href="#">ENLACE2</a></li>
-										<li><a href="#">ENLACE3</a></li>
-									</ul>
-								</li>
+								<li><a href="#">MÁS SECCIONES</a></li>
 							</ul>
 						</div>
 					</nav>
@@ -79,7 +82,6 @@
 					<div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 						
 					</div>
-					<aside>
 						<div class="row">
 							<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 								<div class="row"><!--inicio foto de descuento cuponidad-->
@@ -194,14 +196,13 @@
 										</div><!--nombre seccion-->
 										<div class="row"><!--primera imagen-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
-												<img class="img-responsive" src="image/" alt="regimen-laboral">
+												<img class="img-responsive" src="image/img_especiales_aside.jpg" alt="regimen-laboral">
 												<p>Régimen laboral juvenil</p>
 											</div>
 										</div><!--primera imagen-->
 										<div class="row"><!--segunda imagen con dos fotos-->
 											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">	
-												<img class="img-responsive" src="image/" alt="visita-papa">
-												<img class="img-responsive" src="image/" alt="visita-papa2">
+												<img class="img-responsive" src="image/visita-papa.jpg" alt="visita-papa">
 												<p>COP20</p>
 											</div>
 										</div><!--segunda imagen con dos fotos-->
@@ -213,7 +214,7 @@
 										</div><!--tercera imagen-->
 										<div class="row"><!--cuarta imagen-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
-												<img class="img-responsive" src="image/" alt="medios">
+												<img class="img-responsive" src="image/extinsion.jpg" alt="extension">
 												<p>Especies peruanas en peligro de extinsión</p>
 												<hr class="linea">
 											</div>
@@ -372,7 +373,6 @@
 								</div><!--fin de seccion edicion impresa-->
 							</div>
 						</div>
-					</aside>
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-3">
 						<!--banner-->
 						
