--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<div>
-							<hr class="lin">
-							<p class="gris positioni">INFOGRAFÍAS</p>	
+						<hr class="lin">
+						<p class="gris positioni">INFOGRAFÍAS</p>	
 					</div>
-
 					<div class="row">
 						<div class="col-lg-16">
 							<img class="tamañogral img-responsive" src="image/img_especiales_aside.jpg"><!--checar el link de las imagenes y -->
-							<p class="fondobl posicionar02 text-center"><b>Histórico de cierre de frontera</b></p><!--agregar fondo blanco, debajo del texto, la clase posicionar para el position absolute mas los valores-->
+							<p class="fondobl fondbla posicionar02 text-center"><b>Histórico de cierre de frontera</b></p><!--agregar fondo blanco, debajo del texto, la clase posicionar para el position absolute mas los valores-->
 						</div>
 					</div>
 					<div class="row">
@@ -45,13 +44,13 @@
 								</div>
 							</div>
 						</div>
-						<p class="fondobl posicionar01 text-center"><b>Evolución de la pobreza e indigencia en <br> América Latina</b></p><!--agregar fondo blanco, debajo del texto, la clase posicionar para el position absolute mas los valores-->
+						<p class="fondobl fondbla posicionar01 text-center"><b>Evolución de la pobreza e indigencia en <br> América Latina</b></p><!--agregar fondo blanco, debajo del texto, la clase posicionar para el position absolute mas los valores-->
 					</div>
 					<hr>	
 					<div class="row">
 						<div class="col-lg-16" id="fondopuntos">
 							<img class="center-block position img-responsive" src="image/img_pregunta.png">
-								<div class="fondoblanco padding1 margg">
+								<div class="fondoblanco fondbla padding1 margg">
 									<p class="text-center">La pregunta de hoy</p>
 									<p>¿Cree usted que la premier Ana Jara <br> debe renunciar?</p>
 									<div class="checkbox marggsino">
@@ -63,7 +62,7 @@
 									<button type="button" class="btn btn-danger center-block padd">VOTAR</button>
 									<a class="margver colorj" href="#">Ver resultados</a>	
 								</div>
-								<div class="fondoblanco padding1 margg">
+								<div class="fondoblanco fondbla padding1 margg">
 									<p class="text-center">La pregunta de ayer</p>
 									<p>¿Cree usted que se militarizo la conmemoración del fallo de la Haya en Lima?</p>
 									<div class="progress">
@@ -195,7 +194,7 @@
 					<div class="row">
 						<div class="col-lg-16" id="fondopuntos">
 							<img class="center-block position img-responsive pdb" src="image/img_reporteroc.png">
-							<div class="fondoblancoch padding1 margg pdb">
+							<div class="fondoblancoch fondbla padding1 margg pdb">
 								<p class="text-center ">Reporte ciudadano</p>
 								<img class="margg" src="image/img_sd_reporteroc.jpg">
 								<p>Estacionamiento indebido</p>
@@ -207,7 +206,7 @@
 					</div>
 			</div>
 		</section>
-	</aside> <!--cierre de aside -->
+	
 		
 	</body>
 </html>
