agrege html dentro de header, falta un menu y estilos

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 						</div>
 						<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
 							<button type="submit" class="btn btn-danger btn-sm">SUSCRÍBETE AL BOLETÍN</button><!--boton suscribirte-->
-							<i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-							<i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-							<i class="fa fa-google-plus fa-2x" aria-hidden="true"></i>
-							<i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-							<i class="fa fa-rss fa-2x" aria-hidden="true"></i>
+							<span class="fa fa-facebook fa-2x" aria-hidden="true"></span>
+							<span class="fa fa-twitter fa-2x" aria-hidden="true"></span>
+							<span class="fa fa-google-plus fa-2x" aria-hidden="true"></span>
+							<span class="fa fa-envelope fa-2x" aria-hidden="true"></span>
+							<span class="fa fa-rss fa-2x" aria-hidden="true"></span>
 							<form>
 								<div class="form-group">
-									<i class="fa fa-search posicion" aria-hidden="true"></i>
+									<span class="fa fa-search posicion" aria-hidden="true"></i>
 									<input type="search" class="input-sm" placeholder="Buscar" name="buscando">
 								</div>
 							</form>
@@ -51,7 +51,23 @@
 					</div>
 				</div>
 			</div><!--fin banner-->
-			<div class="container">
+			<div class="container"><!--inicio encabezado con logo-->
+				<div class="row">
+					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+						<img class="img-responsive" src="image/logo-la-republica.jpg" alt="logo">
+					</div>
+					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+						<p class="bg-gris txt-blanco">ESPECIAL DE FÚTBOL</p>
+						<p>TODO SOBRE LA CHAMPIONS LEAGUE</p>
+					</div>
+					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+						<img class="img-responsive pull-left" src="image/img_editorial_text.jpg" alt="editorial">
+						<p class="frase">La corrupción, los orígenes<br> por: <em>Gustavo Mohem Llona</em></p>
+						<img class="img-responsive pull-right" src="image/img_author.jpg" alt="autor">
+					</div>
+				</div>
+			</div><!--fin encabezado con logo-->
+			<div class="container"><!--inicio menu principal-->
 				<div class="row">
 					<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
 						<nav class=" bg-rojo" role="navigation">
@@ -70,7 +86,12 @@
 						</div>
 					</nav>
 				</div>
-			</div>	
+				<div class="row">
+					<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
+						<img src="image/banner-header.jpg" alt="banner_header">
+					</div>
+				</div>
+			</div><!--fin menu principal-->
 		</header>
 		<section>
 			<div class="container">
@@ -201,14 +222,14 @@
 											</div>
 										</div><!--primera imagen-->
 										<div class="row"><!--segunda imagen con dos fotos-->
-											<div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">	
+											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">	
 												<img class="img-responsive" src="image/visita-papa.jpg" alt="visita-papa">
 												<p>COP20</p>
 											</div>
 										</div><!--segunda imagen con dos fotos-->
 										<div class="row"><!--tercera imagen-->
 											<div class="col-xs-16 col-sm-16 col-md-16 col-lg-16">
-												<img class="img-responsive" src="image/" alt="medios">
+												<img class="img-responsive" src="image/medios.jpg" alt="medios">
 												<p>Concentración de Medios</p>
 											</div>
 										</div><!--tercera imagen-->
